# autoallure.dmd

./: .dockerignore  .gitignore  FSM.py  README.md  base_key.json  database.py  functions.py  handlers.py  keyboards.py  loggs.py  main.py  old_functions.py  price.json  price.xlsx  pyproject.toml  requirements.txt  test.py  test_functions.py  test_main.py
.github/workflows/: ci.yml
tests/: test_functions_file.py
