[project]
name = "autoallure-dmd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.17.0",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "apscheduler==3.11.0",
    "async-timeout==5.0.1",
    "attrs==25.1.0",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "frozenlist==1.5.0",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "gspread==6.1.4",
    "idna==3.10",
    "loguru==0.7.3",
    "magic-filter==1.0.12",
    "multidict==6.1.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "oauthlib==3.2.2",
    "propcache==0.2.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytz~=2025.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "ruff>=0.11.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "tzlocal==5.2",
    "urllib3==2.3.0",
    "win32-setctime==1.2.0",
    "yarl==1.18.3",
]


[tool.ruff]
target-version = "py311"
fix = true
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".github",
    ".dockerignore",
    ".gitignore"
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["autoallure_dmd"]

[tool.mypy]
mypy_path = "autoallure_dmd"
strict = true  # Включает строгую проверку типов
ignore_missing_imports = true  # Не проверять сторонние библиотеки
warn_unused_ignores = true  # Предупреждать об игнорируемых аннотациях
warn_redundant_casts = true  # Предупреждать о ненужных `cast()`
disallow_untyped_defs = true  # Запрещает функции без аннотации типов

[mypy-paswords]
disable_error_code = ["import-untyped", "module-name"]
